# wick

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
docs/: 00_README.md  PROJECT.md
prompts/: PROMPT_AUDIT_R1.md  PROMPT_AUDIT_R2.md  PROMPT_AUDIT_R3.md  PROMPT_BUILD_AUDIT_R3E.md  PROMPT_BUILD_R1.md  PROMPT_BUILD_R2.md  PROMPT_BUILD_R3A.md  PROMPT_BUILD_R3B_R3C.md  PROMPT_BUILD_R4.md  PROMPT_BUILD_R5.md
reports/: example_ingestion_quality.json  live_binance_rerun.json  live_yahoo_sample.json
scripts/: generate_example_report.py  r3d_detect.py  r3d_ingest.py  r3d_validate.py  r3e_future_unseen_alert.sh  r3e_future_unseen_backup.sh  r3e_future_unseen_backup_verify.sh  r3e_future_unseen_healthcheck.sh  r3e_future_unseen_local_healthcheck.ps1  r3e_future_unseen_local_healthcheck.sh  r3e_future_unseen_local_run.ps1  r3e_future_unseen_local_run.sh  r3e_future_unseen_retention_dry_run.sh  r3e_future_unseen_run_cycle.sh  r3e_local_host_discovery.ps1  r3e_local_host_discovery.sh  r3e_run_real.py  r3e_run_synthetic.py  validate_ai_governance_artifacts.py
templates/: AI_CURSOR_PROMPT_TEMPLATE.md  AI_IMPACT_ASSESSMENT_TEMPLATE.md  AI_IMPLEMENTATION_REPORT_TEMPLATE.md  AI_REVIEW_TEMPLATE.md  AI_TASK_SPEC_TEMPLATE.md
tests/: conftest.py  test_ai_governance_artifact_validator.py  test_audit_adversarial.py  test_concurrency.py  test_gaps.py  test_ingestion_service.py  test_manual_examples.py  test_no_create_all.py  test_providers.py  test_r2_audit_adversarial.py  test_r2_patterns.py  test_r2_persistence.py  (+19 more)
(+903 files in other folders)
